<resources>
    <string name="app_name">IoP Contributors</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="forum">Forum</string>
    <string name="create_proposal">Create proposal</string>
    <string name="proposals">My proposals</string>
    <string name="toast_wallet_reset">Your wallet was reset!\\nIt will take some time to recover.</string>
    <string name="backup_wallet_dialog_message">Your backup will be encrypted with the chosen password and written to external storage</string>
    <string name="import_export_keys_dialog_password">password</string>
    <string name="backup_wallet_dialog_password_again">again</string>
    <string name="backup_wallet_dialog_password_mismatch">mismatch!</string>
    <string name="import_export_keys_dialog_show">Show password</string>
    <string name="backup_wallet_dialog_warning_encrypted">Your wallet is protected by a spending PIN, Make sure you remember the PIN in addition to the backup password!</string>
    <string name="preference_backup_key">backup_wallet</string>
    <string name="action_settings">Settings</string>
    <string name="btn_start">SIGIN</string>
    <string name="btn_login">LOGIN</string>
    <string name="import_export_keys_dialog_failure_title">Error</string>
    <string name="export_keys_dialog_failure">Your wallet could not be backed up</string>
    <string name="encrypt_keys_dialog_password_strength_weak">weak</string>
    <string name="encrypt_keys_dialog_password_strength_fair">fair</string>
    <string name="encrypt_keys_dialog_password_strength_good">good</string>
    <string name="encrypt_keys_dialog_password_strength_strong">strong</string>
    <string name="export_keys_dialog_success"><t1>Congratulations!</t1><p>Your wallet has been backed up to <tt>%s</tt></p><p>If your device has a removable SD card, your backup <i>should</i> be on that card. Remove it and keep it at a safe place. If the card is <i>not</i> removable, you need to archive your backup to some other place than your device.</p><p><b>If the only place your backup exists is on your device, you run the risk of losing both at the same time!</b></p><p>In any case, make sure you remember your backup password. Do you want to archive your wallet now?</p>></string>
    <string name="export_keys_dialog_button_archive">Achieve</string>
    <string name="button_dismiss">Dismiss</string>
    <string name="export_keys_dialog_mail_subject">IoP contributors walet bacup</string>
    <string name="export_keys_dialog_mail_intent_chooser">The attached encrypted file contains IoP private keys and should be kept safe at all times. Don\\\'t forget the encryption password!</string>
    <string name="export_keys_dialog_mail_intent_failed">Achieve wallet failed</string>
    <string name="restore_wallet_dialog_replace_warning">You are about to replace your current wallet. Any coins in the current wallet will be lost unless you\'ve got a separate backup of that.</string>
    <string name="import_keys_dialog_warning">Important: Do not load private keys from dubious sources! Others can gain control over your funds if you do.</string>
    <string name="import_keys_dialog_title">Restore Wallet</string>
    <string name="import_keys_dialog_button_import">Restore</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="restore_wallet_dialog_success">Wallet was restored</string>
    <string name="restore_wallet_dialog_success_replay">Your wallet was successfully restored. Its balance will be determined next. This will take some time.</string>
    <string name="button_retry">retry</string>
    <string name="import_keys_dialog_failure">Wallet could not be restored:\n\n%s\n\nBad password?</string>
    <string name="import_keys_dialog_file_security_encrypted">password encrypted</string>
    <string name="import_keys_dialog_file_security_unencrypted">unencrypted</string>
    <string name="import_keys_dialog_file_security_external">external storage</string>
    <string name="import_keys_dialog_file_security_internal">app-private storage</string>
    <string name="import_keys_dialog_file_created_automatic">automatic backup %s</string>
    <string name="import_keys_dialog_file_created_manual">manually backed up %s</string>
    <string name="import_keys_dialog_message">Pick a wallet backup file from external storage (%s):</string>
    <string name="id_balance">id_balance</string>


    <string name="report_issue_dialog_title_issue">Report issue</string>
    <string name="report_issue_dialog_title_crash">Previous crash detected</string>
    <string name="report_issue_dialog_message_issue">Please describe your issue precisely enough to be reproduced.</string>
    <string name="report_issue_dialog_message_crash">Would you like to send a crash report, helping to fix this issue in the future?</string>
    <string name="report_issue_dialog_description">issue description</string>
    <string name="report_issue_dialog_report">Report</string>
    <string name="report_issue_dialog_collect_device_info">Append device information</string>
    <string name="report_issue_dialog_collect_installed_packages">Append list of installed packages</string>
    <string name="report_issue_dialog_collect_application_log">Append application log</string>
    <string name="report_issue_dialog_collect_wallet_dump">Append wallet dump</string>
    <string name="report_issue_dialog_mail_intent_chooser">Send report using…</string>
    <string name="report_issue_dialog_mail_intent_failed">Sending report failed.</string>

    <!-- Create proposal -->
    <string name="create_proposal_help_start_block">Blocks until the contract starts his execution</string>
    <string name="create_proposal_help_end_block">Total contract blocks</string>
    <string name="create_proposal_help_block_reward">Reward for each block</string>
    <string name="create_proposal_help_beneficiaries">Address wich will receive the block reward</string>

    <string-array name="coin_array">
        <item>IoP</item>
        <item>mIoP</item>

    </string-array>


</resources>
