<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/import_keys_from_content_dialog_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/import_export_keys_dialog_password"
            android:inputType="textPassword"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/import_keys_from_content_dialog_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checked="false"
            android:text="@string/import_export_keys_dialog_show" />

        <TextView
            android:id="@+id/restore_wallet_from_content_dialog_replace_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/restore_wallet_dialog_replace_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="12sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/import_keys_dialog_warning"
            android:textColor="@color/fg_less_significant"
            android:textSize="12sp" />
    </LinearLayout>

</ScrollView>